[tool.poetry]
name = "pkiviewer"
version = "0.2.1"
description = "PKI file viewer"
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "Apache-2.0"
readme = "ReadMe.md"
homepage = "https://github.com/sffjunkie/pkiviewer"
repository = "https://github.com/sffjunkie/pkiviewer"

packages = [
    { include = "pkiviewer", from = "src" },
    { include = "pkiviewer/py.typed", from = "src" },
]
include = [{ path = "tests", format = "sdist" }]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/sffjunkie/pkiviewer/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
typing-extensions = "^4.3.0"
scriv = "^0.16.0"
pytest-html = "^3.1.1"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0.post0"
pre-commit = "^2.20.0"
black = "^22.10.0"
mypy = "^1.3.0"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^37.0.4"
rich = "^12.5.1"
tomli = "^2.0.1"
click = "^8.1.3"
asn1tools = "^0.163.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.scripts]
pkiviewer = 'pkiviewer.__main__:run'

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"

[tool.isort]
profile = "black"
lines_between_sections = 1

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".ipynb_checkpoints",
    "poetry.lock",
]
per-file-ignores = [
    "src/pkiviewer/oid/__init__.py:E501",
    "src/pkiviewer/view/display/extension/__init__.py:E501",
    "src/pkiviewer/model/extension/__init__.py:E501",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    'cryptography.*',
    'asn1tools.*',
    'pkiviewer.asn1.json_encoder',
    'pkiviewer.model.csr',
]
ignore_errors = true
