[project]
name = "pkiviewer"
version = "0.2.1"
description = "PKI file viewer"
authors = [{ name = "Simon Kennedy", email = "sffjunkie+code@gmail.com" }]
dependencies = [
    "cryptography>=42.0.5",
    "rich>=13.7.1",
    "click>=8.1.7",
    "tomli>=2.0.1",
    "asn1tools>=0.166.0",
]
requires-python = ">=3.11"
readme = "ReadMe.md"
license = { text = "Apache-2.0" }

[project.scripts]
pkiviewer = 'pkiviewer.__main__:run'

[project.urls]
Homepage = "https://github.com/sffjunkie/pkiviewer"
Issues = "https://github.com/sffjunkie/pkiviewer/issues"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "tox>=4.14.1",
    "scriv>=1.5.1",
    "pytest-html>=4.1.1",
    "pre-commit>=3.6.2",
    "ruff>=0.3.2",
    "mypy>=1.9.0",
]

[tool.pdm.scripts]
test = "pytest"
typecheck = "mypy ./src/pkiviewer/"

[[tool.mypy.overrides]]
module = [
    'cryptography.*',
    'asn1tools.*',
    'pkiviewer.asn1.json_encoder',
    'pkiviewer.model.csr',
]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
