[project]
name = "pkiviewer"
version = "0.2.1"
description = "PKI file viewer"
authors = [{ name = "Simon Kennedy", email = "sffjunkie+code@gmail.com" }]
dependencies = [
    "cryptography>=42.0.5",
    "rich>=13.7.1",
    "click>=8.1.7",
    "tomli>=2.0.1",
    "asn1tools>=0.166.0",
]
requires-python = ">=3.11"
readme = "ReadMe.md"
license = { text = "Apache-2.0" }

[project.scripts]
pkiviewer = 'pkiviewer.__main__:run'

[project.urls]
Homepage = "https://github.com/sffjunkie/pkiviewer"
Issues = "https://github.com/sffjunkie/pkiviewer/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.4",
    "scriv>=1.8.0",
    "textual-dev>=1.8.0",
    "tox>=4.47.3",
]

[[tool.mypy.overrides]]
module = [
    'cryptography.*',
    'asn1tools.*',
    'pkiviewer.asn1.json_encoder',
    'pkiviewer.model.csr',
]
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
